2006-08-22  Dom Lachowicz <cinamod@hotmail.com>

	* Bug 344116: Committed patch from Kouhei Sutou <kou@cozmixng.org>
	that makes librsvg use Pango-Cairo instead of PangoFT2+rendering
	text as a path. This patch is disabled for now, as it crashes on
	at least 5 known SVGs (see bug 344116)
	
2006-08-22  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-base.c (rsvg_handle_write_impl): Have libxml2 replace entities 
	for us. This fixes a bug where style definitions don't get properly
	expanded, but causes a (2.15.x-only feature) regression when importing
	external ENTITIES.
	
2006-07-27  Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: 2.15.90
	
2006-07-22  Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: Bug 348329 make gnome-print dependency optional
	* rsvg-text.c: Don't leak PangoFt2 fonts (bug 344235). This is a
	work-around for Pango bug 143542.
	* rsvg.c: Document _render_sub better (bug 346964)
	* rsvg-cairo-render.c: Ditto
	
2006-07-22  Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: Require cairo-png
	
2006-07-20  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-text.c: Fix build breakage caused by newer freetype versions
	(https://sourceforge.net/project/shownotes.php?release_id=416463&group_id=3157). 
	For some reason, they thought that breaking API compatability
	in such a low-level, widely-used library was ok.
	
2006-06-28  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-private.h: Use G_GNUC_PRETTY_FUNCTION so as to not depend on
	GCC extensions (3461163)

	* gdk-pixbuf-loader/Makefile.am: Remove trailing slash so that
	install.sh works on Solaris. It seems that it doesn't like test -d dir/
	
2006-05-14  Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: New better way to invoke gtk-doc (see 341421)
	* Makefile.am: Ditto
	* doc/Makefile.am: Ditto
	* gtk-doc.make: Removed. Auto-generated
	
2006-05-07  Dom Lachowicz <cinamod@hotmail.com>

	* gdk-pixbuf-loader/io-svg.c: Fix build on GTK+ >= 2.9. (329850)
	