@@ -1,3 +1,8 @@
+2006-08-23  Dom Lachowicz <cinamod@hotmail.com>
+
+	* librsvg.def: Make export symbols work on OSX (bug 352512)
+	* rsvg-private.h: Some preparation work for color normalization
+	
 2006-08-22  Dom Lachowicz <cinamod@hotmail.com>
 
 	* Bug 344116: Committed patch from Kouhei Sutou <kou@cozmixng.org>
